Support passing a `SerializedMessage` as input in test fixtures